--- a/src/containers/About.scss
+++ b/src/containers/About.scss
@@ -1,3 +1,7 @@
 #about {
   padding: 32px 0;
+
+  p {
+    padding: 0 10px;
+  }
 }
