--- a/src/containers/Contact.scss
+++ b/src/containers/Contact.scss
@@ -6,4 +6,8 @@
     font-size: 20px;
     width: 45px;
   }
+
+  p {
+    padding: 0 10px;
+  }
 }
